# eduflix-qt-qml-challenge

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: core.cpp  core.h
qt/qml/: CMakeLists.txt  main.cpp
qt/qml/main/: ApplicationContent.qml  ApplicationContentDesign.ui.qml  Main.qml
qt/qml/models/: CMakeLists.txt  qmldir  showsmodel.cpp  showsmodel.h
qt/qml/qmlmodules/Components/: CMakeLists.txt  Card.qml  CardDesign.ui.qml  CardList.qml  CardListDesign.ui.qml  Colors.qml  Fonts.qml  InputFieldButton.qml  InputFieldButtonDesign.ui.qml  Loading.qml  LoadingDesign.ui.qml  MenuBarCustom.qml  MenuBarCustomDesign.ui.qml  ShowDetailsPopup.qml  ShowDetailsPopupDesign.ui.qml  TypeTvShowDetails.qml  qmldir
qt/qml/qmlmodules/Screens/: CMakeLists.txt  HomeScreen.qml  qmldir
